updated GC, Agile, Spring